Added highscore state

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-__pycache__
+*__pycache__
 index.css
 setup.py
 virtual
-Classes/__pycache__
-Functions/__pycache__
-GameConstants/__pycache__
-stats.csv
